--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-@font-face { font-family: linjapona; src: url("linja-pona-4.9.otf") format("opentype"); }
+@font-face { font-family: sitelenponapona; src: url("sitelen-pona-pona.otf") format("opentype"); }
 html, body { height: 100%; margin: 0; padding: 0; width: 100%; }
 body { background: #1c1c1c; font-family: monospace; font-size: 14px; letter-spacing: 1px; line-height: 1.75em; color: #fff;}
 #container { box-sizing: border-box; padding: 1em; }
 a { color: #fff; font-weight: 700; text-decoration: none; border-bottom: solid 1px #fff; padding-bottom: 2px; }
 a:hover { color: #c2c2c2; border-color: transparent; }
-textarea { text-transform: lowercase; display: block; padding: .5em; width: 100%; box-sizing: border-box; font-family: 'linjapona'; letter-spacing: 0; font-size: 2em; margin: 0; position: relative; top: 2px; }
+textarea { text-transform: lowercase; display: block; padding: .5em; width: 100%; box-sizing: border-box; font-family: 'sitelenponapona'; letter-spacing: 0; font-size: 3em; margin: 0; position: relative; top: 2px; }
